# veggy_menu_item_extractor

./: .gitignore  Makefile  README.md  SYSTEM_BREAKDOWN.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
configs/: settings.py
docker/: api.Dockerfile  mcp.Dockerfile
scripts/: evaluate_system.py  generate_test_menus.py
src/api/: main.py
src/api/routes/: __init__.py  menu.py  review.py
src/api/schemas/: __init__.py  menu.py
src/api/services/: __init__.py  mcp_client.py  ocr.py  parser.py
src/mcp/: main.py
src/mcp/llm/: __init__.py  classifier.py  providers.py
src/mcp/rag/: __init__.py  embeddings.py  vectorstore.py
src/mcp/rag/data/: __init__.py  knowledge_base.py
src/mcp/tools/: __init__.py  calculator.py  classifier.py
tests/: conftest.py  test_classifier.py  test_integration.py  test_ocr.py  test_parser.py
tests/data/menus/: ground_truth.json
ui/: index.html
